# telegram-yt-bot

./: .env  Cargo.toml  Dockerfile.api  Dockerfile.bot  docker-compose.yml
src/: main.rs
